--- a/index.html
+++ b/index.html
@@ -3,27 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sales Summary 12345</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <title>Sales Summary ${seed}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
-    <div class="bg-white p-8 rounded-lg shadow-lg max-w-md w-full">
-        <h1 class="text-2xl font-semibold mb-4">Sales Summary</h1>
-        <div id="total-sales" class="text-xl text-green-500 font-bold"></div>
-        <button id="fetch-data" class="mt-4 px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">Fetch Data</button>
+<body>
+    <div class="container mt-5">
+        <h1>Sales Summary</h1>
+        <div id="total-sales" class="alert alert-info" style="font-size: 1.5em;">Total Sales: $0</div>
     </div>
     <script>
-        document.getElementById('fetch-data').addEventListener('click', async () => {
-            const response = await fetch('data.csv');
-            const text = await response.text();
-            const rows = text.split('\n').slice(1); // Skip header
-            const sales = rows.map(row => {
-                const cols = row.split(',');
-                return parseFloat(cols[1]) || 0; // Assume sales are in the second column
+        $(document).ready(function () {
+            $.get('data.csv', function (data) {
+                const rows = data.split('\n');
+                let totalSales = 0;
+                rows.forEach((row, index) => {
+                    if (index === 0) return; // Skip header
+                    const columns = row.split(',');
+                    const sales = parseFloat(columns[1]); // Assuming sales are in the second column
+                    if (!isNaN(sales)) {
+                        totalSales += sales;
+                    }
+                });
+                $('#total-sales').text(`Total Sales: $${totalSales.toFixed(2)}`);
             });
-            const totalSales = sales.reduce((acc, val) => acc + val, 0);
-            document.getElementById('total-sales').innerText = `Total Sales: $${totalSales.toFixed(2)}`;
         });
     </script>
 </body>
